stubhub-ticketing/infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: wakidur/ticketing-auth
          resources:
            limits:
              memory: "1028Mi"
              cpu: "500m"
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-clusterip-service
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 5000
      targetPort: 5000
